<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2014 Santoso Wijaya

     Permission is hereby granted, free of charge, to any person obtaining
     a copy of this software and associated documentation files (the
     "Software"), to deal in the Software without restriction, including
     without limitation the rights to use, copy, modify, merge, publish,
     distribute, sublicense, and/or sell copies of the Software, and to
     permit persons to whom the Software is furnished to do so, subject to
     the following conditions:

     The above copyright notice and this permission notice shall be
     included in all copies or substantial portions of the Software.

     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
     EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
     MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
     NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
     LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
     OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
     WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->
<resources>

    <string name="app_name">A Torch</string>
    <string name="pressme">Press Me!</string>
    <string name="err_cannot_acquire">Cannot acquire camera resources!</string>
    <string name="err_cannot_toggle">Cannot toggle camera LED!</string>
    <string name="notify_toggle_on">Flashlight LED turned on</string>
    <string name="notify_toggle_on_ext">Tap to turn off.</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_autotoggle_title">Auto Toggle</string>
    <string name="pref_autotoggle_summary">Toggle flashlight on at launch</string>
    <string name="pref_dim_title">Dim Screen</string>
    <string name="pref_dim_summary">Dim the screen when flashlight is turned on</string>
    <string name="pref_userocker_title">Use Volume Rocker</string>
    <string name="pref_userocker_summary">Use the volume rocker to toggle flashlight</string>
    <string name="pref_strobe_title">Strobe</string>
    <string name="pref_strobe_summary">Switch toggles flashlight in strobe mode</string>
    <string name="pref_british_switch_title">Reverse switch</string>
    <string name="pref_british_switch_summary">Reverse the button\'s sprite modality</string>

    <string name="pref_donate_bitcoin">Donate with Bitcoin!</string>
    <string name="button_copy_address">Copy address</string>
    <string name="toast_address_copied">Address copied to clipboard</string>
    <string name="label_donate_address">Donate address</string>

    <string name="bitcoin_donate_uri" translatable="false">bitcoin:17Wsrpak45Tp3KGzLcmCcqbcyYzzqSeiFz</string>
    <string name="bitcoin_donate_address" translatable="false">17Wsrpak45Tp3KGzLcmCcqbcyYzzqSeiFz</string>

</resources>