<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_settings" >"
    
    <CheckBoxPreference android:title="@string/pref_autotoggle_title" 
        android:summary="@string/pref_autotoggle_summary"
        android:key="onstart"
        android:defaultValue="false" />
    
    <CheckBoxPreference android:title="@string/pref_dim_title"
        android:summary="@string/pref_dim_summary"
        android:key="dimscreen"
        android:defaultValue="true" />
    
    <CheckBoxPreference android:title="@string/pref_userocker_title"
        android:summary="@string/pref_userocker_summary"
        android:key="userocker"
        android:defaultValue="false" />
    
</PreferenceScreen>