<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="10dp"
             android:background="@android:color/black">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_btc_donate_qr"
        android:layout_gravity="center"
        android:src="@drawable/btcdonate_white"
        android:contentDescription="@string/bitcoin_donate_uri"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bitcoin_donate_address"
        android:id="@+id/text_donate_address"
        android:layout_gravity="center_horizontal|top"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_copy_address"
        android:id="@+id/btn_copy_address"
        android:layout_gravity="center_horizontal|bottom"/>
</FrameLayout>